# mirth-connect-skills

./: .gitignore  .npmignore  README.md  package.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
mirth-agent-tools/: .env.example  .gitignore  .npmignore  README.md  pyproject.toml
mirth-agent-tools/src/mirth_agent_tools/: __init__.py  audit.py  cli.py  cli_fallback.py  client.py  config.py  discovery.py  errors.py  mcp_server.py  redaction.py  safety.py  tools.py  xml_utils.py
mirth-agent-tools/tests/: test_client.py  test_safety_tools.py  test_xml_utils.py
mirth-agent-tools/tests/fixtures/: sample_channel.xml
mirth-connect-operator/: SKILL.md
mirth-connect-operator/agents/: openai.yaml
scripts/: audit-format.js  local-check.js
tests/: README.md  metrics.py  mock_mirth_server.py  run_sandbox_checks.js  run_tool_evaluation.py  scenarios.py
