[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirth-agent-tools"
version = "0.1.1"
description = "Full-access Mirth Connect tool server for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
mirth-agent-tools = "mirth_agent_tools.cli:main"
mirth-agent-mcp = "mirth_agent_tools.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
